<resources>
    <string name="app_name">Test</string>
    <string name="action_settings">Settings</string>
    <string name="menu_option1">Testing </string>
    <string name="menu_option2">Settings</string>
    <string name="menu_option3">Test</string>
    <string name="menu_option4">Settings</string>
    <string name="menu_option5">Test</string>
    <string name="menu_option6">Settings</string>
    <string name="title_activity_creation_screen">CreationScreen</string>

    <string name="button_top">Top</string>
    <string name="button_legging">Legging</string>
    <string name="button_shoe">Shoe</string>
    <string name="button_accessory">Accessory</string>

    <string name="activity2_title">DressMe</string>
    <string name="title_activity_gallery_top">gallery_top</string>
    <string name="title_activity_gallerybutton__top">Gallerybutton_Top</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_favorites2">Favorites2</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_weather">Weather</string>
    <string name="title_activity_activity_clothing_top">ActivityClothingTop</string>
    <string name="title_activity_activity_clothing_leggings">ActivityClothingLeggings</string>
    <string name="title_activity_activity_clothing_accessory">ActivityClothingAccessory</string>
    <string name="title_activity_activity_clothing_shoe">ActivityClothingShoe</string>
    <string name="title_activity_creation__add">Creation_Add</string>
    <string name="title_activity_main22">Main22Activity</string>

</resources>
